--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Watch</title>
 </head>
 <body>
-    <h1 class="watch">Hello word!</h1>
+    <h1 class="watch"></h1>
+    <button class="change-format" type="button" title="Click here to change to 12 hours format">Change time format</button>
+    <script src="index.js"></script>
 </body>
 </html>
