--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Watch</title>
-</head>
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet"></head>
 <body>
-    <h1 class="watch"></h1>
-    <button class="change-format" type="button" title="Click here to change to 12 hours format">Change time format</button>
+    <div class="watch-wraper">
+        <h1 class="watch"></h1>
+        <button class="change-format" type="button" title="Click here to change to 12 hours format">Change time format</button>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
