--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet"></head>
 <body>
     <div class="watch-wraper">
-        <h1 class="watch"></h1>
+        <h1 class="watch">Current time</h1>
         <button class="change-format" type="button" title="Click here to change to 12 hours format">Change time format</button>
     </div>
     <script src="index.js"></script>
